--- a/platform/android/res/values/strings.xml
+++ b/platform/android/res/values/strings.xml
@@ -1,2 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<resources><string name="app_id">1403709019858016</string></resources>
+<resources>
+	<string name="facebook_app_id">1403709019858016</string>
+</resources>
